Need to test it

--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,6 +1,8 @@
-FROM tensorflow/tensorflow:latest-gpu-py3
+FROM tensorflow/tensorflow:latest-gpu-jupyter
 
 # Install system packages
+RUN apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub
+
 RUN apt-get update && apt-get install -y --no-install-recommends \
       bzip2 \
       g++ \
@@ -16,6 +18,10 @@ COPY src /src
 
 WORKDIR /src
 
+#RUN apt purge -y python3
+#RUN apt-get update && apt-get install -y  python
+RUN python --version 
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 ENV PYTHONPATH='/src/:$PYTHONPATH'
