--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,8 @@
 h5py==2.7.*
 Keras==2.1.*
-numpy==1.14.*
-scipy==1.1.*
+numpy
+scipy
 six==1.11.*
-QKeras==0.9.0
+git+https://github.com/google/qkeras.git
 grpcio==1.46.0
 hls4ml
