--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,4 +1,5 @@
-FROM tensorflow/tensorflow:latest-gpu-jupyter
+FROM tensorflow/tensorflow:2.9.1-gpu
+
 
 # Install system packages
 RUN apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub
@@ -15,7 +16,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     rm -rf /var/lib/apt/lists/*
 
 COPY src /src
-
+RUN apt-get update &&  apt-get -y install libsndfile1-dev
 WORKDIR /src
 
 #RUN apt purge -y python3
